Etapa2/Gramatica.txt
# -------------------------------------------------
#  Universidad Simón Bolívar
#  Traductores e interpretadores - CI3725
#  Prof. Ricardo Monascal
#
#  Autores: Jorge Marcano   # Carnet 11-10566
#           Meggie Sánchez  # Carnet 11-10939
#
# Proyecto BOT - Etapa 2 - Gramática
# -------------------------------------------------

# Estructura de un programa en bot

PROGRAM : DEC_LIST_INIT INST_EXE 
        | INST_EXE

DEC_LIST_INIT : TkCreate DEC_LIST

DEC_LIST : DEC DEC_LIST
         | DEC

DEC : TIPO TkBot ID_LIST COMP_LIST TkEnd

TIPO : TkBool
     | TkChar
     | TkInt

ID_LIST : ID TkComa ID_LIST
        | ID

ID : TkIdent

COMP_LIST : COMP COMP_LIST 
          | empty 

COMP : TkOn EXPR TkDosPuntos INST_BOT_LIST TkEnd 
     | TkOn STATE TkDosPuntos INST_BOT_LIST TkEnd

STATE : TkActivation
      | TkDeactivation
      | TkDefault

INST_BOT_LIST : INST_BOT INST_BOT_LIST
              | INST_BOT

INST_BOT : TkStore EXPR TkPunto        
         | TkCollect TkPunto
         | TkCollect TkAs ID TkPunto
         | TkDrop EXPR TkPunto
         | DIR TkPunto
         | DIR EXPR TkPunto
         | TkRead TkPunto
         | TkRead TkAs ID TkPunto
         | TkSend TkPunto
         | TkRecieve TkPunto
         | TkRecieve EXPR TkPunto

DIR : TkLeft 
    | TkRight
    | TkUp
    | TkDown

INST_EXE : TkExecute INST_CONT_LIST TkEnd

INST_CONT_LIST : INST_CONT INST_CONT_LIST
               | INST_CONT

INST_CONT : TkActivate ID_LIST TkPunto
          | TkAdvance ID_LIST TkPunto
          | TkDeactivate ID_LIST TkPunto
          | TkIf EXPR TkDosPuntos INST_CONT TkElse TkDosPuntos INST_CONT TkEnd
          | TkIf EXPR TkDosPuntos INST_CONT TkEnd
          | TkWhile EXPR TkDosPuntos INST_CONT TkEnd
          | PROGRAM

EXPR : TkNum
     | TkIdent
     | TkCaracter
     | TkMe
     | TkParAbre EXPR TkParCierra
     | TkNegacion EXPR
     | TkResta EXPR %prec TkRestaUn
     | EXPR TkSuma EXPR
     | EXPR TkResta EXPR
     | EXPR TkMult EXPR
     | EXPR TkDiv EXPR
     | EXPR TkMod EXPR
     | TkTrue
     | TkFalse 
     | EXPR TkConjuncion EXPR 
     | EXPR TkDisyuncion EXPR
     | EXPR TkIgual EXPR
     | EXPR TkMayor EXPR
     | EXPR TkMayorIgual EXPR
     | EXPR TkMenor EXPR
     | EXPR TkMenorIgual EXPR
     | EXPR TkDistinto EXPR '''

empty : lambda
